# TabMap

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  tabmap_conda.yml
code/: config.py  evaluate_model.py  main.py  tabmap_construction.py
code/dataloader/: data_loader.py  data_summary.ipynb  dataset.py
code/hparams_tuner/: dl_models_tuner.py  ml_models_tuner.py
code/models/: CNN_2d.py  soft_ordering_CNN_1d.py  tabnet.py  tabtransformer.py
code/utils/: OT_solver.py  data_util.py  tabmap_visualization.py
data/: README.md
data/micromass/: data_raw.csv
docs/: README.md
notebooks/: Demo_Disease_Diagnosis.ipynb  demo_classification.ipynb  demo_feature_importance_analysis.ipynb
tabmap/: config.py  evaluate_model.py  tabmap_construction.py
tabmap/dataloader/: data_loader.py  dataset.py
tabmap/hparams_tuner/: dl_models_tuner.py  ml_models_tuner.py
tabmap/models/: CNN_2d.py  soft_ordering_CNN_1d.py  tabnet.py  tabtransformer.py
tabmap/utils/: data_util.py
tutorials/: Tutorial_Benchmarking.ipynb  Tutorial_Classification.ipynb  Tutorial_Feature_Importance.ipynb
